# scratch-cpluplus

./: README.md
example1/: CMakeLists.txt
example1/examples/: BinaryDataPacketTest.cpp  BufferTest.cpp  CMakeLists.txt  example1.cpp  example2.cpp
example1/messages/: CMakeLists.txt
example1/messages/src/messages/: AuthorizationRequest.cpp  AuthorizationRequest.hpp  AuthorizationResponse.cpp  AuthorizationResponse.hpp  BinaryDataPacket.cpp  BinaryDataPacket.hpp  ForwardedMulticastData.cpp  ForwardedMulticastData.hpp  ForwardedSubscriptionRequest.cpp  ForwardedSubscriptionRequest.hpp  InteractorAdvertisement.cpp  InteractorAdvertisement.hpp  Message.cpp  Message.hpp  MessageType.hpp  MulticastData.cpp  MulticastData.hpp  NotificationRequest.cpp  NotificationRequest.hpp  SubscriptionRequest.cpp  SubscriptionRequest.hpp  UnicastData.cpp  UnicastData.hpp
example1/messages/tests/: CMakeLists.txt  test_AuthorizationRequest.cpp  test_AuthorizationResponse.cpp  test_BinaryDataPacket.cpp  test_ForwardedMulticastData.cpp  test_ForwardedSubscriptionRequest.cpp  test_InteractorAdvertisement.cpp  test_MulticastData.cpp  test_NotificationRequest.cpp  test_SubscriptionRequest.cpp  test_UnicastData.cpp  test_serialize.hpp
example1/serialization/: CMakeLists.txt
example1/serialization/src/serialization/: array.cpp  array.hpp  native.cpp  native.hpp  string.cpp  string.hpp  vector.cpp  vector.hpp
example1/serialization/src/serialization/boost/asio/: buffer.cpp  buffer.hpp
example1/serialization/src/serialization/boost/asio/ip/: address.cpp  address.hpp
example1/serialization/src/serialization/boost/ip/: address.cpp  address.hpp
example1/serialization/src/serialization/boost/uuid/: uuid.cpp  uuid.hpp
example1/serialization/tests/: CMakeLists.txt  native_test.cpp  string_test.cpp  test_value.hpp  test_vector.cpp
example1/serialization/tests/boost/asio/ip/: ip_test.cpp
example1/serialization/tests/boost/uuid/: uuid_test.cpp
