include_directories("/opt/boost/1.68.0/include")
link_directories("/opt/boost/1.68.0/lib")
link_libraries(boost_system)

add_executable(TestBinaryDataPacket test_BinaryDataPacket.cpp)
target_link_libraries(TestBinaryDataPacket PRIVATE serialization)
target_link_libraries(TestBinaryDataPacket PRIVATE messages)

add_test(TestBinaryDataPacket TestBinaryDataPacket)

add_executable(TestForwardedSubscriptionRequest test_ForwardedSubscriptionRequest.cpp)
target_link_libraries(TestForwardedSubscriptionRequest PRIVATE serialization)
target_link_libraries(TestForwardedSubscriptionRequest PRIVATE messages)

add_test(TestForwardedSubscriptionRequest TestForwardedSubscriptionRequest)

add_executable(TestForwardedMulticastData test_ForwardedMulticastData.cpp)
target_link_libraries(TestForwardedMulticastData PRIVATE serialization)
target_link_libraries(TestForwardedMulticastData PRIVATE messages)

add_test(TestForwardedMulticastData TestForwardedMulticastData)

add_executable(TestAuthorizationRequest test_AuthorizationRequest.cpp)
target_link_libraries(TestAuthorizationRequest PRIVATE serialization)
target_link_libraries(TestAuthorizationRequest PRIVATE messages)

add_test(TestAuthorizationRequest TestAuthorizationRequest)

add_executable(TestAuthorizationResponse test_AuthorizationResponse.cpp)
target_link_libraries(TestAuthorizationResponse PRIVATE serialization)
target_link_libraries(TestAuthorizationResponse PRIVATE messages)
target_link_libraries(TestAuthorizationResponse PRIVATE boost_system)

add_test(TestAuthorizationResponse TestAuthorizationRequest)

add_executable(TestInteractorAdvertisement test_InteractorAdvertisement.cpp)
target_link_libraries(TestInteractorAdvertisement PRIVATE serialization)
target_link_libraries(TestInteractorAdvertisement PRIVATE messages)

add_test(TestInteractorAdvertisement TestInteractorAdvertisement)
